# volette

./: .gitignore  Cargo.toml  README.md  main.vt  out  output  output.s  test.c  test_unit  test_while
exp_codegen/: Cargo.toml  output  t  test.c
exp_codegen/src/: main.rs
src/: lib.rs  main.rs
src/compiler/: diagnostic_macros.rs  error.rs  mod.rs  tokens.rs  validation.rs
subjects/: fault.vt  main.vt  output.s  test.c  test_cast.vt  type_check_test.vt  types.vt  while.vt
tests/: analysis.rs  codegen.rs  integration.rs  lexer.rs  parser.rs
tests/snapshots/: analysis__analyze_arity_too_few.snap  analysis__analyze_arity_too_few.snap.new  analysis__analyze_arity_too_many.snap  analysis__analyze_arity_too_many.snap.new  analysis__analyze_block_expr.snap  analysis__analyze_cast_int_to_float.snap  analysis__analyze_cast_int_to_int.snap  analysis__analyze_function_calls.snap  analysis__analyze_invalid_cast.snap  analysis__analyze_invalid_cast.snap.new  analysis__analyze_main.snap  analysis__analyze_multiple_errors.snap  analysis__analyze_multiple_errors.snap.new  analysis__analyze_pointer_types.snap  analysis__analyze_simple_arithmetic.snap  analysis__analyze_type_inference.snap  analysis__analyze_unary_ops.snap  analysis__analyze_undefined_function.snap  analysis__analyze_undefined_function.snap.new  analysis__analyze_undefined_variable.snap  analysis__analyze_undefined_variable.snap.new  codegen__codegen_block_expr.snap  integration__end_to_end_block_expr.snap  integration__end_to_end_function_calls.snap  integration__end_to_end_main.snap  parser__parse_main.snap  (+18 more)
(+89 files in other folders)
